--- a/src/assets/scss/_settings-dp.scss
+++ b/src/assets/scss/_settings-dp.scss
@@ -17,7 +17,7 @@ $datepickerTextColor: (
   disabled: #aeaeae,
   currentDate: $blue,
   common: #4a4a4a,
-  dayNames: $pink,
+  dayNames: $green,
   navArrows: #9c9c9c
 ) !default;
 
