--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -1,7 +1,9 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container">
 
-		<a class="navbar-brand" href="#">PMU18.ru</a>
+		<a class="navbar-brand" href="#">
+			<img src="assets/img/NEW_PMU_logo.png" alt="" height="30">
+		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
