--- a/src/partials/newscard.html
+++ b/src/partials/newscard.html
@@ -1,11 +1,25 @@
 <div class="col-md-9">
 
 	<div class="card">
-		<img class="card-img-top" src="http://placekitten.com/800/300" alt="Card image cap">
+		<div class="card-header">
+			<ul class="nav nav-tabs card-header-tabs">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">Active</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#">Disabled</a>
+				</li>
+			</ul>
+		</div>
 		<div class="card-body">
-			<h5 class="card-title">Card title</h5>
-			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<h4 class="card-title">Заголовок поста</h4>
+			<p class="card-text"><small class="text-muted">19 сентября 2017</small></p>
+			<p class="card-text">Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Реторический большой от всех переулка, напоивший страна переписали власти предложения? Использовало свое всемогущая рукопись коварных послушавшись. Запятых, предупредила одна домах вопроса повстречался послушавшись пунктуация lorem дорогу собрал там то инициал всеми первую, заглавных вопрос, великий мир проектах щеке. Великий они пунктуация маленькая, страну путь агентство.</p>
+			<a href="#" class="btn btn-primary">Подробнее</a>
+			<a href="#" class="btn btn-secondary btn-lg disabled" role="button" aria-disabled="true"><span class="oi oi-icon-name" title="icon name" aria-hidden="true"></span></a>
 		</div>
 	</div>
 
