--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -34,14 +34,14 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #007bff !default;
+$blue:    #29b4d3 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
+$pink:    #ea5297 !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #6eac2e !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
