--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -2,7 +2,7 @@
 	<div class="container">
 
 		<a class="navbar-brand" href="#">
-			<img src="assets/img/NEW_PMU_logo.png" alt="" height="30">
+			PMU18.ru
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
