--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,3 +1,19 @@
 <div class="col-md-3">
-	<div id="sandbox-container"></div>
+	<div class="list-group" id="side-acc">
+
+		<button type="button" class="list-group-item list-group-item-action active">
+			<span>Новости</span>
+			<span class="badge badge-light text-primary text-right">12</span>
+		</button>
+
+		<button type="button" class="list-group-item list-group-item-action">
+			<span>События</span>
+			<span class="badge badge-light text-primary text-right">3</span>
+		</button>
+
+		<button type="button" class="list-group-item list-group-item-action">
+			<span>Календарь</span>
+		</button>
+		<div id="sandbox-container"></div>
+	</div>
 </div>
