--- a/src/partials/jumbotron.html
+++ b/src/partials/jumbotron.html
@@ -2,8 +2,8 @@
 
 	<div id="hero" class="jumbotron">
 		<div class="container">
-			<h1 class="display-4">Fluid jumbotron</h1>
-			<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+			<h1 class="display-4">Заголовок сайта</h1>
+			<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Журчит рукописи от всех осталось! Грустный своего своих текстов.</p>
 		</div>
 	</div>
 
