Добил карты новостей

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -49,6 +49,7 @@
 
 // Стили плагинов
 @import "datepicker";
+@import "baguetteBox";
 @import "cell";
 @import "navigation";
 @import "timepicker";
@@ -63,3 +64,5 @@
 @import "components/datepicker";
 @import "components/main-container";
 @import "components/comments";
+@import "components/gallery-thumb";
+@import "components/card-news";
