--- a/src/partials/newscard.html
+++ b/src/partials/newscard.html
@@ -1,7 +1,9 @@
 <main class="col-md-9 main-container">
 
-	<div class="card">
+	<div class="card card-news">
+
 		<div class="card-header">
+			<img src="assets/img/gallery/1/1-1.jpg" class="header-bg" alt="">
 			<ul class="nav nav-tabs card-header-tabs" id="nav-tab" role="tablist">
 				<li class="nav-item">
 					<a class="nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Статья</a>
@@ -14,7 +16,9 @@
 				</li>
 			</ul>
 		</div>
+
 		<div class="card-body tab-content" id="nav-tabContent">
+
 			<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 				<h4 class="card-title">Заголовок поста</h4>
 				<p class="card-text">
@@ -29,6 +33,7 @@
 				</a>
 				<a href="#" class="btn btn-primary">Подробнее</a>
 			</div>
+
 			<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
 
 				<!-- <h4 class="card-title">Комментарии</h4> -->
@@ -41,9 +46,18 @@
 					<div class="media-body">
 
 						<h5 class="mt-0">Лена Курчаева</h5>
-						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Мир города о первую предупредила рекламных страну безорфографичный назад возвращайся пояс текстами жаренные, океана букв своих осталось его. Рукопись предупредила свой ручеек, возвращайся там сих буквенных.</p>
-						<button type="button" class="btn btn-light btn-sm"><span class="oi oi-heart"></span></button>
-						<button type="button" class="btn btn-light btn-sm"><span class="oi oi-pencil"></span></button>
+						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Мир города о первую предупредила
+							рекламных страну безорфографичный назад возвращайся пояс текстами жаренные, океана букв своих осталось его. Рукопись
+							предупредила свой ручеек, возвращайся там сих буквенных.</p>
+						<button type="button" class="btn btn-danger btn-sm">
+							<span class="oi oi-heart"></span>
+						</button>
+						<button type="button" class="btn btn-light btn-sm">
+							<span class="oi oi-pencil"></span>
+						</button>
+						<button type="button" class="btn btn-light btn-sm">
+							<span class="oi oi-trash"></span>
+						</button>
 
 					</div>
 				</div>
@@ -54,7 +68,9 @@
 					<div class="media-body">
 						<h5 class="mt-0">Лена Курчаева</h5>
 						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
-						<button type="button" class="btn btn-light btn-sm"><span class="oi oi-heart"></span></button>
+						<button type="button" class="btn btn-light btn-sm">
+							<span class="oi oi-heart"></span>
+						</button>
 
 					</div>
 				</div>
@@ -64,86 +80,42 @@
 					<img class="mr-3" src="https://randomuser.me/api/portraits/men/9.jpg" alt="Generic placeholder image">
 					<div class="media-body">
 						<h5 class="mt-0">Лена Курчаева</h5>
-						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Мир города о первую предупредила рекламных страну безорфографичный назад возвращайся пояс текстами жаренные, океана букв своих осталось его.</p>
-						<button type="button" class="btn btn-light btn-sm"><span class="oi oi-heart"></span></button>
+						<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Мир города о первую предупредила
+							рекламных страну безорфографичный назад возвращайся пояс текстами жаренные, океана букв своих осталось его.</p>
+						<button type="button" class="btn btn-light btn-sm">
+							<span class="oi oi-heart"></span>
+						</button>
 
 					</div>
 				</div>
 
 				<div class="input-group">
-					<input type="text" class="form-control form-control-lg" placeholder="Написать комментарий..." aria-label="Recipient's username" aria-describedby="basic-addon2">
+					<input type="text" class="form-control form-control-lg" placeholder="Написать комментарий..." aria-label="Recipient's username"
+					  aria-describedby="basic-addon2">
 					<div class="input-group-append">
 						<button class="btn btn-outline-primary" type="button">Отправить</button>
 					</div>
 				</div>
 
 			</div>
-			<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-				<h4 class="card-title">3</h4>
-				<p class="card-text">
-					<small class="text-muted">19 сентября 2017</small>
-				</p>
-				<p class="card-text">Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Реторический большой от всех переулка,
-					напоивший страна переписали власти предложения? Использовало свое всемогущая рукопись коварных послушавшись. Запятых,
-					предупредила одна домах вопроса повстречался послушавшись пунктуация lorem дорогу собрал там то инициал всеми первую,
-					заглавных вопрос, великий мир проектах щеке. Великий они пунктуация маленькая, страну путь агентство.</p>
-				<a href="#" class="btn btn-primary">Подробнее</a>
-			</div>
-		</div>
-	</div>
 
-	<div class="card">
-		<div class="card-header">
-			<ul class="nav nav-tabs card-header-tabs" id="nav-tab" role="tablist">
-				<li class="nav-item">
-					<a class="nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Статья</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" d="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Комментарии</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Галерея</a>
-				</li>
-			</ul>
-		</div>
-		<div class="card-body tab-content" id="nav-tabContent">
-			<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-				<h4 class="card-title">Заголовок поста</h4>
-				<p class="card-text">
-					<small class="text-muted">19 сентября 2017</small>
-				</p>
-				<p class="card-text">Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Реторический большой от всех переулка,
-					напоивший страна переписали власти предложения? Использовало свое всемогущая рукопись коварных послушавшись. Запятых,
-					предупредила одна домах вопроса повстречался послушавшись пунктуация lorem дорогу собрал там то инициал всеми первую,
-					заглавных вопрос, великий мир проектах щеке. Великий они пунктуация маленькая, страну путь агентство.</p>
-				<a href="#" class="btn btn-danger" role="button" aria-disabled="true">
-					<span class="oi oi-heart"></span>
-				</a>
-				<a href="#" class="btn btn-primary">Подробнее</a>
-			</div>
-			<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-				<h4 class="card-title">Комментарии</h4>
-				<p class="card-text">
-					<small class="text-muted">19 сентября 2017</small>
-				</p>
-				<p class="card-text">Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Реторический большой от всех переулка,
-					напоивший страна переписали власти предложения? Использовало свое всемогущая рукопись коварных послушавшись. Запятых,
-					предупредила одна домах вопроса повстречался послушавшись пунктуация lorem дорогу собрал там то инициал всеми первую,
-					заглавных вопрос, великий мир проектах щеке. Великий они пунктуация маленькая, страну путь агентство.</p>
-				<a href="#" class="btn btn-primary">Подробнее</a>
-			</div>
 			<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-				<h4 class="card-title">3</h4>
-				<p class="card-text">
-					<small class="text-muted">19 сентября 2017</small>
-				</p>
-				<p class="card-text">Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Реторический большой от всех переулка,
-					напоивший страна переписали власти предложения? Использовало свое всемогущая рукопись коварных послушавшись. Запятых,
-					предупредила одна домах вопроса повстречался послушавшись пунктуация lorem дорогу собрал там то инициал всеми первую,
-					заглавных вопрос, великий мир проектах щеке. Великий они пунктуация маленькая, страну путь агентство.</p>
-				<a href="#" class="btn btn-primary">Подробнее</a>
+				<h4 class="card-title">Галерея</h4>
+				<div class="gallery row">
+					<a href="assets/img/gallery/1/1-1.jpg" class="col-4" data-caption="Image caption">
+						<img src="assets/img/gallery/1/1-1.jpg" class="img-thumbnail" alt="First image">
+					</a>
+					<a href="assets/img/gallery/1/1-2.jpg" class="col-4" data-caption="Image caption">
+						<img src="assets/img/gallery/1/1-2.jpg" class="img-thumbnail" alt="First image">
+					</a>
+					<a href="assets/img/gallery/1/1-3.jpg" class="col-4" data-caption="Image caption">
+						<img src="assets/img/gallery/1/1-3.jpg" class="img-thumbnail" alt="First image">
+					</a>
+				</div>
 			</div>
+
 		</div>
+
 	</div>
 
 </main>
