короч какая-то хрень

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -66,3 +66,5 @@
 @import "components/comments";
 @import "components/gallery-thumb";
 @import "components/card-news";
+@import "components/admin";
+@import "components/article";
