--- a/src/partials/jumbotron.html
+++ b/src/partials/jumbotron.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<div id="hero" class="jumbotron">
+	<div id="hero" class="jumbotron mb-4">
 		<div class="container">
 			<h1 class="display-4">Заголовок сайта</h1>
 			<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Журчит рукописи от всех осталось! Грустный своего своих текстов.</p>
