--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -1,7 +1,7 @@
-<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light mb-4">
 	<div class="container">
 
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="/">
 			PMU18.ru
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,6 +13,9 @@
 			<form class="form-inline mr-auto"></form>
 	
 			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="admin.html">Админка</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Регистрация</a>
 				</li>
