--- a/src/partials/admin-panel/admin-panel.html
+++ b/src/partials/admin-panel/admin-panel.html
@@ -1,11 +1,11 @@
-<ul class="nav nav-tabs admin-panel">
+<ul class="nav nav-tabs admin-panel" id="myTab">
 
 	<li class="nav-item">
-		<a class="nav-link active" href="#">Лента</a>
+		<a class="nav-link active" id="tape-tab" data-toggle="tab" href="#tape" role="tab" aria-controls="tape" aria-selected="true">Лента</a>
 	</li>
 
 	<li class="nav-item">
-		<a class="nav-link" href="#">Пользователи</a>
+		<a class="nav-link" id="users-tab" data-toggle="tab" href="#users" role="tab" aria-controls="users" aria-selected="false">Пользователи</a>
 	</li>
 
 </ul>
