--- a/src/partials/admin-panel/users/users-content.html
+++ b/src/partials/admin-panel/users/users-content.html
@@ -4,9 +4,9 @@
 	<thead>
 		<tr>
 			<th scope="col" class="table-id">#</th>
-			<th scope="col" class="table-title">Заголовок</th>
-			<th scope="col">Автор</th>
-			<th scope="col">Дата</th>
+			<th scope="col">Имя</th>
+			<th scope="col">Никнейм</th>
+			<th scope="col">E-mail</th>
 			<th scope="col"></th>
 			<th scope="col"></th>
 		</tr>
@@ -15,13 +15,13 @@
 
 		<tr>
 			<th scope="row" class="table-id">1</th>
-			<td><a href="/article.html">Заголовок Далеко-далеко за словесными горами в стране гласных.</a></td>
-			<td><a href="#">Зорина Марина</a></td>
-			<td class="table-date">10.01.2018</td>
-			<td class="table-control">
+			<td scope="row">Иван Иванов</td>
+			<td scope="row">Ivan1998</td>
+			<td scope="row"><a href="#">Ivan1998@mail.ru</a></td>
+			<td scope="row">
 				<button type="button" class="btn btn-primary"><span class="oi oi-pencil"></span></button>
 			</td>
-			<td class="table-control">
+			<td class="table-control" scope="row">
 				<button type="button" class="btn btn-danger"><span class="oi oi-media-pause"></span></button>
 			</td>
 		</tr>
