--- a/src/partials/newscard.html
+++ b/src/partials/newscard.html
@@ -31,7 +31,7 @@
 				<a href="#" class="btn btn-danger" role="button" aria-disabled="true">
 					<span class="oi oi-heart"></span>
 				</a>
-				<a href="#" class="btn btn-primary">Подробнее</a>
+				<a href="/article.html" class="btn btn-primary">Подробнее</a>
 			</div>
 
 			<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
