--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-	<div class="list-group" id="side-acc">
+	<div class="list-group mb-3" id="side-acc">
 
 		<button type="button" class="list-group-item list-group-item-action active">
 			<span>Новости</span>
@@ -10,10 +10,7 @@
 			<span>События</span>
 			<span class="badge badge-light text-primary text-right">3</span>
 		</button>
-
-		<button type="button" class="list-group-item list-group-item-action">
-			<span>Календарь</span>
-		</button>
-		<div id="sandbox-container"></div>
 	</div>
+	
+			<input type="hidden" class="form-control" aria-describedby="date" placeholder="Дата" id="sandbox-container">
 </div>
