--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container">
 
 		<a class="navbar-brand" href="/">
